--- a/AutoFullPrice/AutoFullPrice.csproj
+++ b/AutoFullPrice/AutoFullPrice.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8DF0A676-C2DD-4568-B78B-D040A3E90849}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Unk.Biz</RootNamespace>
-    <AssemblyName>Unk.Biz</AssemblyName>
+    <ProjectGuid>{C8D77B8B-5CBD-462A-9D0D-99462E596EAC}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>AutoFullPrice</RootNamespace>
+    <AssemblyName>AutoFullPrice</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -43,16 +45,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entity\Entity.cs" />
-    <Compile Include="Entity\GainsInHistoryEntity.cs" />
-    <Compile Include="Entity\TokenDetailsEntity.cs" />
-    <Compile Include="Entity\TokenStoreEntity.cs" />
-    <Compile Include="Entity\UserInfoEntity.cs" />
-    <Compile Include="GainsInHistoryBiz.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserInfoBiz.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
