--- a/Unk.Core/Unk.Core.csproj
+++ b/Unk.Core/Unk.Core.csproj
@@ -47,6 +47,7 @@
     <Compile Include="CacheHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
+    <Compile Include="ViewModel\UserViewModels.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
